--- a/palette.html
+++ b/palette.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Visually Distinct Colors Generator</title>
-		<link rel="stylesheet" href="https://unpkg.com/bulmaswatch/slate/bulmaswatch.min.css">
+		<link rel="stylesheet" href="https://unpkg.com/bulmaswatch@0.7.2/slate/bulmaswatch.min.css">
 		<link rel="canonical" href="https://mokole.com/palette.html">
 	</head>
 	<body>
