fixing malformed body tag

--- a/index.html
+++ b/index.html
@@ -857,7 +857,7 @@
 		  ga('send', 'pageview');		
 		</script>		
 	</head>
-	<body
+	<body>
 		<div class="main">
 			<div id="topbar">
 			    <span class="left">MOKOLÉ</span>
