--- a/qwixx/scorer.html
+++ b/qwixx/scorer.html
@@ -13,18 +13,27 @@
 	    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
 	    <link rel="stylesheet" href="normalize.css">
 	    <style type="text/css">
-	    	body { font-weight: bold; font-family: 'Courier'; ; font-size: 20px; }
-	    	.disabled { background-color: #DDDDDF !important ; color: #AAAAAF !important; }
+	    	body { 
+	    		font-weight: bold; font-family: 'Courier'; ; font-size: 20px; 
+			    /* unselectable text */
+			    -webkit-touch-callout: none;
+			    -webkit-user-select: none;
+			    -khtml-user-select: none;
+			    -moz-user-select: none;
+			    -ms-user-select: none;
+			    user-select: none;
+	    	}
+	    	.disabled { background-color: #DDDDDF !important ; color: #AAAAAF !important; cursor: not-allowed !important; }
 	    	.row { margin-top: 1ex; padding: 1ex 1em; display: inline-block; }
 	    	.sub-row { padding: 2px; display: inline-block; font-size: 1ex; }
 	    	.round { border-radius: 8px; }
 	    	.gray { color: #666666; }
 	    	.card { background-color: #DDDDDF; color: black; padding: 1ex 1em 0ex 1em; }
 	    	.card-bottom { background-color: #AAAAAF; color: black; padding: 1ex 1em; }
-	    	.lock { margin: 2px 0ex 2px 1ex; border-radius: 25px; display: inline-block; }
-	    	.cell { width: 50px; height: 50px; text-align: center; vertical-align: middle; line-height: 50px; font-size: 40px; display: inline-block; }
+	    	.lock { margin: 2px 0ex 2px 1ex; border-radius: 25px; display: inline-block; cursor: pointer; }
+	    	.cell { width: 50px; height: 50px; text-align: center; vertical-align: middle; line-height: 50px; font-size: 40px; display: inline-block; cursor: pointer; }
 	    	.non-scored { text-align: right; padding: 1ex 0em;}
-	    	.non-scored div { display: inline-block; background-color: white; border: 2px solid #666666; border-radius: 10px; width: 20px; height: 20px; }
+	    	.non-scored div { display: inline-block; background-color: white; border: 2px solid #666666; border-radius: 10px; width: 20px; height: 20px; cursor: pointer; }
 
 	    	.red .row { background-color: #DB1921; }
 	    	.red .sub-row { background-color: #851619; }
