--- a/qwixx/scorer.html
+++ b/qwixx/scorer.html
@@ -71,7 +71,7 @@
 	    </style>
 	</head>
 	<body>
-		<div id="main" style="display: inline-block; transform-origin: top left;">
+		<div id="main" style="display: inline-block; transform-origin: top left; white-space: nowrap;">
 			<div class="card">
 				<div class="red">
 					<div class="row">
