--- a/qwixx/index.html
+++ b/qwixx/index.html
@@ -5,12 +5,12 @@
 		<title>Qwixx Interactive Score Sheet</title>
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="mobile-web-app-capable" content="yes">
-		<meta name="application-name" content="Qwixx Scorer">
+		<meta name="application-name" content="Qwixx Score Sheet">
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-title" content="Qwixx Scorer">
 		<link rel="manifest" href="manifest.json">
-	    <link rel="canonical" href="//mokole.com/qwixx/scorer.html">
-	    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
+	    <link rel="canonical" href="//mokole.com/qwixx/">
+	    <link rel="stylesheet" href="font-awesome.5.11.2.min.css">
 	    <link rel="stylesheet" href="normalize.css">
 	    <style type="text/css">
 	    	body { 
