use cdn for font awesome

--- a/qwixx/index.html
+++ b/qwixx/index.html
@@ -7,10 +7,10 @@
 		<meta name="mobile-web-app-capable" content="yes">
 		<meta name="application-name" content="Qwixx Score Sheet">
 		<meta name="apple-mobile-web-app-capable" content="yes">
-		<meta name="apple-mobile-web-app-title" content="Qwixx Scorer">
+		<meta name="apple-mobile-web-app-title" content="Qwixx Score Sheet">
 		<link rel="manifest" href="manifest.json">
 	    <link rel="canonical" href="//mokole.com/qwixx/">
-	    <link rel="stylesheet" href="font-awesome.5.11.2.min.css">
+	    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
 	    <link rel="stylesheet" href="normalize.css">
 	    <style type="text/css">
 	    	body { 
