--- a/qwixx/index.html
+++ b/qwixx/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" manifest="qwixx-scorer.appcache">
+<html lang="en" manifest="qwixx.appcache">
 	<head>
 		<meta charset="utf-8">
 		<title>Qwixx Interactive Score Sheet</title>
