--- a/slimevsunicorn/index.html
+++ b/slimevsunicorn/index.html
@@ -5,6 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+        <script src="tosource.min.js" type="text/javascript" async></script>
         <script src="seedrandom.min.js" type="text/javascript" async></script>
         <script src="graph.js" type="text/javascript" async></script>
         <script src="game.js" type="text/javascript" async></script>
