--- a/slimevsunicorn/index.html
+++ b/slimevsunicorn/index.html
@@ -10,6 +10,7 @@
         <script src="graph.js" type="text/javascript" async></script>
         <script src="game.js" type="text/javascript" async></script>
         <script src="mcts.js" type="text/javascript" async></script>
+        <script src="animator.js" type="text/javascript" async></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/js/all.min.js" async></script>
         <style type="text/css">
             html {
@@ -149,10 +150,10 @@
             .fa-gem, .fa-medal, .fa-sun {
                 font-size: .6em;
             }
-            .slime-node { fill: black; }
-            .slime-edge { stroke: black; stroke-width: 1; }
-            .unicorn-node { fill: white; }
-            .unicorn-edge { stroke: white; stroke-width: 1; }
+            .slime-node { fill: black !important; }
+            .slime-edge { stroke: black; stroke-width: 1; stroke-dasharray: 0;}
+            .unicorn-node { fill: white !important; }
+            .unicorn-edge { stroke: white; stroke-width: 1; stroke-dasharray: 0;}
             .selectable { stroke: yellow !important; }
             .clickable { cursor: pointer; }
             .not-allowed {cursor: not-allowed !important; }
@@ -167,11 +168,11 @@
             <div id="v" class="vs slime">V</div>
             <div id="slime-score" class="slime">0<i class="fas fa-medal"></i></div>
             <div id="slime-logo" class="slime"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" style="width: 100%; height: 100%"><g transform="translate(0,0)" style="touch-action: none;"><path d="M269.614 30.044c-41.094.11-65.414 10.652-81.03 26.75-16.656 17.17-24.139 42.145-28.03 71.115-3.893 28.97-4.132 61.396-7.866 92.127-3.734 30.73-10.966 60.248-30.557 82.406-15.817 17.892-42.361 25.805-62.95 35.092-10.296 4.643-19.02 9.523-23.905 14.351-4.885 4.829-6.475 8.28-4.984 15.149 1.096 5.052 1.608 4.95 5.66 5.863.26.059.576.099.865.147.557 5.33.8 11.75-.547 15.793-2.607 7.825-15.762 11.07-15.469 19.314.375 10.517 11.005 24.543 21.44 23.178 9.19-1.203 13.373-15.322 12.992-24.582-.206-4.997-6.993-7.761-8.076-12.643-1.234-5.558.271-14.423 1.748-20.937 2.398-.154 4.955-.365 7.662-.627 17.928-1.738 42.524-4.773 62.908 10.922l.188.144.18.154c8.02 6.876 11.601 15.838 13.708 23.77 2.107 7.931 3.122 15.205 5.084 20.517 1.963 5.313 4.028 8.479 9.606 11.131 5.527 2.63 15.524 4.371 32.275 2.875 6.943-1.197 23.278-9.063 40.928-16.4 17.776-7.39 37.824-14.455 57.451-11.662 22.195 3.158 36.671 21.628 50.092 35.969 6.71 7.17 13.151 13.532 19.105 17.296 5.955 3.765 10.752 5.103 16.756 3.752 3.784-.85 6.019-2.717 8.604-6.716 2.585-4 4.872-10.023 7.088-16.815 4.43-13.584 8.153-30.887 22.523-41.054 15.43-10.919 35.04-9.373 51.36-9.366 2.497.001 4.914-.024 7.236-.088 1.676 6.563 3.632 16.245 2.43 22.186-1.07 5.28-8.3 8.397-8.44 13.781-.322 12.39 5.349 32.649 17.742 32.672 12.318.023 18.463-20.109 17.758-32.406-.326-5.692-7.844-8.637-9.877-13.963-2.372-6.216-3.17-17.085-3.437-24.25 3.643-1.11 5.647-2.575 6.986-4.809 1.073-1.79 1.352-3.25.978-5.77-.373-2.519-1.69-5.98-4.097-9.984-4.815-8.008-13.776-17.92-24.324-28.353-21.097-20.867-48.347-43.68-62.825-67.358-4.863-7.952-8.993-16.588-12.576-25.705-7.318-.474-14.554-.62-21.726-.51-.277 9.449-.298 27.428 3.062 37.31 3.313 9.743 17.026 11.318 17.207 25.634.193 15.237-6.193 39.866-21.422 40.383-15.972.541-25.213-24.753-25.283-40.735-.06-13.684 12.29-14.826 14.397-23.879 1.635-7.029.603-17.906-.751-26.676-1.116-5.49-5.266-11.503-12.227-10.64-33.643 3.153-66.13 10.934-98.915 17.518 3.746-21.205 11.727-47.904 35.3-65.721a73.974 73.974 0 0 1 4.52-3.154c-.304 5.65-.976 11.957-2.492 16.06-1.742 4.717-9.088 7.325-8.68 12.336.611 7.504 8.295 16.512 15.815 16.13 8.506-.434 16.796-11.492 15.943-19.966-.404-4.016-7.606-4.097-9.29-7.765-2.548-5.546-1.784-15.554-.835-22.373 21.352-9.2 44.721-6.84 64.479.29 8.004 2.89 13.774 7.568 18.152 13.231-4.283-18.421-7.608-37.494-11.049-56.047-4.684 11.104-23.122 12.455-42.303 4.672 15.512-9.746 25.996-23.802 35.4-38.783-5.935-25.782-13.52-48.61-24.792-64.387-11.33-15.859-25.448-25.085-48.428-25.775a258.397 258.397 0 0 0-8.445-.12zm-41.33 90.005c.635-.009 1.278.256 1.91.832 17.36 15.839 31.196 35.58 54.338 41.11-10.236 9.53-31.876 14.4-57.028 1.125-10.858-17.297-5.365-42.982.78-43.067zm41.023 318.409c-16.932.1-38.307 8.538-36.385 22.369 3.127 22.496 55.236 28.997 67.424 9.832 6.62-10.41-8.522-27.451-20.367-30.903-3.094-.901-6.764-1.321-10.672-1.298z" fill="#000000" fill-opacity="1"></path></g></svg></div>
-            <div id="slime-points" class="slime">1<i class="fas fa-sun"></i></div>
+            <div id="slime-points" class="slime">0<i class="fas fa-sun"></i></div>
             <div id="s" class="vs unicorn">S</div>
             <div id="unicorn-font" class="unicorn">Unicorn</div>
             <div id="unicorn-logo" class="unicorn"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" style="width: 100%; height: 100%"><g transform="matrix(-1,0,0,1,512,0)" style="touch-action: none;"><path d="M494 20L304.887 143.357c16.494 14.608 32.743 22.57 44.963 36.97zM298.346 93.594c-12.58.436-26.59 4.984-38.047 11.77-7.64 4.523-14.115 9.97-18.304 15.142-4.19 5.173-5.79 9.832-5.648 12.668l.283 5.73-5.075 2.676C133.713 193.16 80.945 250.727 18 310.594V494h166.047c6.145-15.424 12.724-33.898 15.086-47.535 1.728-9.977-2.783-21.807-8.23-35.244-5.444-13.436-11.85-28.706-7.63-45.423 3.49-13.827 14.375-25.752 24.096-35.656 4.45-4.534 8.71-8.463 12.075-11.445-6.558-8.577-14.065-20.315-16.51-34.894l17.75-2.978c2.68 15.976 15.203 28.533 22.8 39.24l-.323.23c10.54 14.634 18.892 28.395 30.72 37.546 13.358 10.337 31.484 16.39 66.526 11.49l6.658-.932 2.782 6.124c6.96 15.322 14.372 23.89 21.015 28.423 6.643 4.535 12.63 5.46 18.692 4.79 12.125-1.34 24.29-10.974 27.76-14.264 4.13-3.92 9.657-9.476 13.32-16.124 3.347-6.076 5.073-12.687 3.48-20.744-42.68-37.562-69.592-108.75-90.256-152.6-9.245-19.62-35.786-34.492-52.967-47.95-2.427-1.4-2.675-2.582-3.24-5.154-4.215-19.167 3.188-40.257 10.974-57.298-.096.002-.186-.01-.28-.006zM59.352 136.55c17.863 4.925 37.775 9.665 57.406 14.815 14.803 3.883 29.26 7.935 42.406 12.766 17.914-12.178 37.407-24.123 59.072-35.77-51.62-13.3-109.928-3.148-158.884 8.19zm28.738 26.126c-23.002 4.133-45.974 10.254-67.147 16.662 18.133 3.813 38.298 7.314 58.207 11.242 11.774 2.323 23.337 4.766 34.256 7.643a686.475 686.475 0 0 1 27.403-21.15c-9.044-2.932-18.71-5.698-28.62-8.298-7.952-2.086-16.043-4.098-24.1-6.1zM47.44 202.94c-9.875 2.096-19.728 4.582-29.44 7.29v18.04a2251.165 2251.165 0 0 1 20.172 3.146c10.505 1.7 20.847 3.498 30.734 5.625 8.836-8.185 17.887-16.322 27.268-24.397-6.64-1.56-13.52-3.024-20.508-4.403-9.32-1.838-18.81-3.566-28.227-5.3zM304 224c8.837 0 16 7.163 16 16s-7.163 16-16 16-16-7.163-16-16 7.163-16 16-16zM18 246.512v26.58c4.16.195 8.28.425 12.342.71 7.44-7.2 14.878-14.384 22.387-21.538a604.747 604.747 0 0 0-17.433-3.078A1501.67 1501.67 0 0 0 18 246.512z" fill="#ffffff" fill-opacity="1"></path></g></svg></div>
-            <div id="unicorn-score" class="unicorn">1<i class="fas fa-medal"></i></div>
+            <div id="unicorn-score" class="unicorn">0<i class="fas fa-medal"></i></div>
             <div id="unicorn-points" class="unicorn">0<i class="fas fa-sun"></i></div>
             <div id="info">...Not Implemented Yet...</div>
             <div id="remaining-gems" class="controls-up">(5<i class="fas fa-gem"></i>)</div>
@@ -207,6 +208,7 @@
     </style>
     <script type="text/javascript">
         var svg, game;
+        var canPlay = true;
 
         async function play_random_game() {
             let iterations = 100;
@@ -215,7 +217,6 @@
             let first_player = (game.state.playerTurn == 1) ? player1 : player2;
             let last_player = (game.state.playerTurn == 2) ? player1 : player2;
             let first_player_move, last_player_move;
-            console.log(`player${first_player.player} plays first`);
             while (!game.gameOver()) {
                 first_player_move = first_player.selectMove();
                 game.playMove(first_player_move, true);
@@ -223,7 +224,7 @@
                 last_player_move = last_player.selectMove();
                 game.playMove(last_player_move, true);
             }
-            console.log(game.state.toSource());            
+            // console.log(game.state.toSource());            
         }
 
         document.addEventListener('DOMContentLoaded', (event) => {
@@ -240,8 +241,27 @@
                 svg = new SvgGraph(data, document.getElementById('board'), document.getElementById('colors'))
                 // svg.draw(4+Math.floor(Math.random() * 9));
                 svg.draw(4+Math.floor(Math.random() * 3));
-                game = new SlimeVsUnicorn(svg.graph);
-                setTimeout(play_random_game, 0);
+                animator = new Animator(
+                    info=document.getElementById('info'),
+                    player1='Slime',
+                    player2='Unicorn', 
+                    player1Points=document.getElementById('slime-points'),
+                    player2Points=document.getElementById('unicorn-points'),
+                    player1Score=document.getElementById('slime-score'),
+                    player2Score=document.getElementById('unicorn-score'),
+                    log_to_console=true,
+                    player1Node='slime-node',
+                    player2Node='unicorn-node',
+                    player1Edge='slime-edge',
+                    player2Edge='unicorn-edge',
+                );
+                game = new SlimeVsUnicorn(svg.graph, animator);
+            });
+            window.addEventListener('click', e => {
+                if (canPlay) {
+                    canPlay = false;
+                    setTimeout(play_random_game, 0);
+                }
             });
         });
     </script>
