--- a/slimevsunicorn/index.html
+++ b/slimevsunicorn/index.html
@@ -243,8 +243,9 @@
             .then(data => {
                 console.log('json graphs loaded');
                 svg = new SvgGraph(data, document.getElementById('board'), document.getElementById('colors'))
-                // svg.draw(4+Math.floor(Math.random() * 9));
-                svg.draw(4+Math.floor(Math.random() * 2));
+                //svg.draw(4+Math.floor(Math.random() * 9));
+                // svg.draw(4+Math.floor(Math.random() * 4));
+                svg.draw(5);
                 animator = new Animator(
                     info=document.getElementById('info'),
                     player1='Slime',
