--- a/pavaj/index.html
+++ b/pavaj/index.html
@@ -12,6 +12,7 @@
   		position: absolute;
   		background-color: transparent;
   		color: transparent !important;
+  		cursor: move !important;
   	}
   	#selected_piece .piece {
   		position: absolute !important;
