--- a/pavaj/index.html
+++ b/pavaj/index.html
@@ -3,201 +3,9 @@
 <head>
   <meta charset="utf-8">
   <title>PAVAJ</title>
-  <style type="text/css">
-  	body { overflow: hidden; }
-  	#selected_piece {
-  		top: 50%;
-  		left: 50%;
-  		user-select: none;
-  		position: absolute;
-  		background-color: transparent;
-  		color: transparent !important;
-  		cursor: move !important;
-  	}
-  	#selected_piece .piece {
-  		position: absolute !important;
-  	}
-  	.center {
-  		position: absolute;
-  		top: 50%;
-  		left: 50%;
-  		transform: translate(-50%, -50%);
-  	}
-  	.piece { 
-  		position: relative;
-  		cursor: move;
-  		/*text-shadow: 1px 1px 1px darkgray;*/
-  		color: black;
-  		font-weight: bold;
-  		font-family: sans-serif;
-  		font-size: 5vmin;
-  		background-image: url("glass2.png");
-  		background-size: cover;
-  		/*border: 4px solid;*/
-  	}
-  	.border {
-  		position: absolute;
-  		/*background-color: black;*/
-  		width: 5%;
-  		height: 5%;
-  	}
-  	.border-right {
-  		right: 0px;
-  		top: 0px;
-  		height: 100%;
-  	}
-  	.border-left {
-  		left: 0px;
-  		top: 0px;
-  		height: 100%;
-  	}
-  	.border-top {
-  		left: 0px;
-  		top: 0px;
-  		width: 100%;
-  	}
-  	.border-bottom {
-  		left: 0px;
-  		bottom: 0px;
-  		width: 100%;
-  	}
-  	.new {
-  		transform: scale(0.8);
-  		transform-origin: center center;
-  	}
-  	.white { 
-  		background-color: #F4F4F8;
-  		border-color: #F4F4F8;
-  	}
-  	.yellow {
-  		background-color: #FED766;
-  		border-color: #FED766;
-  	}
-  	.red {
-  		background-color: #FE4A49;
-  		border-color: #FE4A49;
-  	}
-  	.blue {
-  		background-color: #2AB7CA;
-  		border-color: #2AB7CA;
-  	}
-  	.piece.white { background-color: rgba(244, 244, 248, .95); }
-  	.piece.yellow { background-color: rgba(254, 215, 102, .95); }
-  	.piece.red { background-color: rgba(254, 74, 73, .95); }
-  	.piece.blue { background-color: rgba(42, 183, 202, .95); }
-  	.board-container {
-  		margin: auto;
-  		width: 100vmin;
-  		height: 100vmin;
-  		user-select: none;	
-  	}
-  	/*.board > div { position: relative; }*/
-  	.board {
-  		width: 100%;
-  		height: 100%;
-  		outline: 1px solid black;
-  		background-color: black;
-  		display: grid;
-  		grid-template-columns: repeat(9, 1fr);
-  		grid-template-rows: repeat(9, 1fr);
-  		gap: 3px 3px;
-  		grid-template-areas: 
-			"A9 B9 C9 D9 E9 F9 G9 H9 I9"
-			"A8 B8 C8 D8 E8 F8 G8 H8 I8"
-			"A7 B7 C7 D7 E7 F7 G7 H7 I7"
-			"A6 B6 C6 D6 E6 F6 G6 H6 I6"
-			"A5 B5 C5 D5 E5 F5 G5 H5 I5"
-			"A4 B4 C4 D4 E4 F4 G4 H4 I4"
-			"A3 B3 C3 D3 E3 F3 G3 H3 I3"
-			"A2 B2 C2 D2 E2 F2 G2 H2 I2"
-			"A1 B1 C1 D1 E1 F1 G1 H1 I1";
-	}
-	.A1 { grid-area: A1; }
-	.B1 { grid-area: B1; }
-	.C1 { grid-area: C1; }
-	.D1 { grid-area: D1; }
-	.E1 { grid-area: E1; }
-	.F1 { grid-area: F1; }
-	.G1 { grid-area: G1; }
-	.H1 { grid-area: H1; }
-	.I1 { grid-area: I1; }
-	.A2 { grid-area: A2; }
-	.B2 { grid-area: B2; }
-	.C2 { grid-area: C2; }
-	.D2 { grid-area: D2; }
-	.E2 { grid-area: E2; }
-	.F2 { grid-area: F2; }
-	.G2 { grid-area: G2; }
-	.H2 { grid-area: H2; }
-	.I2 { grid-area: I2; }
-	.A3 { grid-area: A3; }
-	.B3 { grid-area: B3; }
-	.C3 { grid-area: C3; }
-	.D3 { grid-area: D3; }
-	.E3 { grid-area: E3; }
-	.F3 { grid-area: F3; }
-	.G3 { grid-area: G3; }
-	.H3 { grid-area: H3; }
-	.I3 { grid-area: I3; }
-	.A4 { grid-area: A4; }
-	.B4 { grid-area: B4; }
-	.C4 { grid-area: C4; }
-	.D4 { grid-area: D4; }
-	.E4 { grid-area: E4; }
-	.F4 { grid-area: F4; }
-	.G4 { grid-area: G4; }
-	.H4 { grid-area: H4; }
-	.I4 { grid-area: I4; }
-	.A5 { grid-area: A5; }
-	.B5 { grid-area: B5; }
-	.C5 { grid-area: C5; }
-	.D5 { grid-area: D5; }
-	.E5 { grid-area: E5; }
-	.F5 { grid-area: F5; }
-	.G5 { grid-area: G5; }
-	.H5 { grid-area: H5; }
-	.I5 { grid-area: I5; }
-	.A6 { grid-area: A6; }
-	.B6 { grid-area: B6; }
-	.C6 { grid-area: C6; }
-	.D6 { grid-area: D6; }
-	.E6 { grid-area: E6; }
-	.F6 { grid-area: F6; }
-	.G6 { grid-area: G6; }
-	.H6 { grid-area: H6; }
-	.I6 { grid-area: I6; }
-	.A7 { grid-area: A7; }
-	.B7 { grid-area: B7; }
-	.C7 { grid-area: C7; }
-	.D7 { grid-area: D7; }
-	.E7 { grid-area: E7; }
-	.F7 { grid-area: F7; }
-	.G7 { grid-area: G7; }
-	.H7 { grid-area: H7; }
-	.I7 { grid-area: I7; }
-	.A8 { grid-area: A8; }
-	.B8 { grid-area: B8; }
-	.C8 { grid-area: C8; }
-	.D8 { grid-area: D8; }
-	.E8 { grid-area: E8; }
-	.F8 { grid-area: F8; }
-	.G8 { grid-area: G8; }
-	.H8 { grid-area: H8; }
-	.I8 { grid-area: I8; }
-	.A9 { grid-area: A9; }
-	.B9 { grid-area: B9; }
-	.C9 { grid-area: C9; }
-	.D9 { grid-area: D9; }
-	.E9 { grid-area: E9; }
-	.F9 { grid-area: F9; }
-	.G9 { grid-area: G9; }
-	.H9 { grid-area: H9; }
-	.I9 { grid-area: I9; }		
-  </style>
-  <link rel="stylesheet" type="text/css" href="normalize.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
   <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
 </head>
-
 <body>
 	<div class="board-container">
 		<div class="board" id="big-board">
@@ -293,26 +101,6 @@
 		let polyominoes;
 		let clicked, moved;
 		document.addEventListener("DOMContentLoaded", async () => { 
-			// handle click and drag on board
-			// document.querySelectorAll(".board div").forEach(item => {
-			// 	item.addEventListener("mousedown", (e) => {
-			// 		clicked = item;
-			// 		moved = false;
-			// 	});
-			// 	item.addEventListener("mousemove", (e) => {
-			// 		if (clicked && !moved) {
-			// 			moved = true;
-			// 		}
-			// 	});
-			// 	item.addEventListener("mouseup", (e) => {
-			// 		if (moved) {
-			// 			console.log(`${clicked} moved to ${item}`, clicked, item);
-			// 		} else {
-			// 			console.log(`${clicked} clicked`, clicked);
-			// 		}
-			// 		clicked = false;
-			// 	});
-			// });
 			// Draw an empty board
 			var i = 0;
 			col_labels.forEach(col => {
